--- a/templates/coping.html
+++ b/templates/coping.html
@@ -1,12 +1,53 @@
-{% extends "navbar.html" %}
-{% block content %}
-<link rel="stylesheet" href="../static/coronacarecss.css">
+<html>
+<head>
+<meta charset="utf-8">
+<title>A.T.A.C</title>
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet "href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet "href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Source+Code+Pro:wght@600&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
+<div class="bar">
+  <a href="navbar2.html">
+<img  class="home-icon" src="https://www.flaticon.com/svg/static/icons/svg/846/846449.svg" alt="home icon" width="30" height="30" />
+  <button type="button" class="btn1 btn-outline-dark buu" ><a href="mailto:saishreyakumar342@gmail.com"></a>Contact us!</button>
+</a>
+</div>
+</head>
+<body>
+	<section id="title">
+
+<br />
+<br />
+<br />
+<br />
+<br />
 		<h1 style="text-align:center;">Coping with COVID-19</h1>
 		<br>
 		<h3 style="text-align:center"> Be kind to your mind</h3>
 		<br>
-		<p style="text-align:center"> Mental health problems are common. Here are ways to cope with stress and promote wellbeing.</p>
+		<p style="text-align:center" class="para"> Mental health problems are common. Here are ways to cope with stress and promote wellbeing.</p>
 		<br>
+		<center>
+
 		<div id="mentalhealth">
   <div class="card">
     <div class="card-header" id="headingOne">
@@ -42,7 +83,7 @@
 			<li>  Try relaxation techniques and listening to music.</li>
 			<li>  Try to do some other activities you enjoy.</li>
 		</ul>
-        
+
       </div>
     </div>
   </div>
@@ -63,7 +104,7 @@
 			<a href="https://www.healthline.com/nutrition/17-tips-to-sleep-better">Tips for better sleep</a>
 			<li><strong>Try to eat healthy, well-balanced meals.</strong> Add healthy fats, cut sodium, bump up your fiber, and aim for a variety of colors on your plate..</li>
 			<a href="https://www.healthline.com/nutrition/healthy-eating-tips">Healthy eating tips</a>
-		</ul>      
+		</ul>
       </div>
     </div>
   </div>
@@ -82,7 +123,7 @@
 			<li>Check in with your loved ones often.</li>
 			<li>It can help you and your loved ones feel less lonely and isolated.</li>
 		</ul>
-        
+
       </div>
     </div>
   </div>
@@ -99,13 +140,13 @@
 			<li>If you, or someone you care about, are feeling overwhelmed with emotions like sadness, depression, or anxiety, or feel like you want to harm yourself or others, seek professional help.</li>
 			<li>If distress impacts activities of your daily life for several days or weeks, talk to a clergy member, counselor, or healthcare provider.</li>
 		</ul>
-        
+
       </div>
     </div>
   </div>
 </div>
+
+</center>
+</section>
 </body>
 </html>
-
-
-{% endblock %}	
