--- a/templates/treatments.html
+++ b/templates/treatments.html
@@ -1,10 +1,42 @@
-{% extends "navbar.html" %}
-{% block content %}
-<link rel="stylesheet" href="../static/coronacarecss.css">
+<html>
+<head>
+<meta charset="utf-8">
+<title>A.T.A.C</title>
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet "href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet "href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Source+Code+Pro:wght@600&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
+<div class="bar">
+  <a href="navbar2.html">
+<img  class="home-icon" src="https://www.flaticon.com/svg/static/icons/svg/846/846449.svg" alt="home icon" width="30" height="30" />
+  <button type="button" class="btn1 btn-outline-dark buu" ><a href="mailto:saishreyakumar342@gmail.com"></a>Contact us!</button>
+</a>
+</div>
+</head>
+<body style="background-color:#008F9C;">
 <br>
-<h1 style="text-align:center;">Treatments for COVID-19</h1>
-		<p style="text-align:center"> People with COVID-19 should receive supportive care to help relieve symptoms.</p>
-		<p style="text-align:center">There is no specific antiviral treatment recommended for COVID-19.</p>
+<h1 style="text-align:center ;">Treatments for COVID-19</h1>
+		<p class=para style="text-align:center"> People with COVID-19 should receive supportive care to help relieve symptoms.</p>
+		<p class=para style="text-align:center">There is no specific antiviral treatment recommended for COVID-19.</p>
 		<br>
 		<div id="treatments">
   <div class="card">
@@ -43,7 +75,7 @@
 			<li> Stay in touch with your doctor. Call before you get medical care.</li>
 			<li>Your local health authorities may give instructions on checking your symptoms and reporting information.</li>
 		</ul>
-        
+
       </div>
     </div>
   </div>
@@ -63,21 +95,10 @@
 			<li>New confusion</li>
 			<li>Inability to wake or stay awake</li>
 			<li>Bluish lips or face</li>
-		</ul>      
+		</ul>
       </div>
     </div>
 	<button class="btn btn-link collapsed btn-danger">Call your medical provider for any other symptoms that are severe or concerning to you.</button>
   </div>
-
 </body>
 </html>
-
-
-
-
-
-
-
-		
-{% endblock %}
-
