--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<div class="bar">
+<div class="bar">
     <a href="{{url_for('index')}}">
 <img  class="home-icon" src="https://www.flaticon.com/svg/static/icons/svg/846/846449.svg" alt="home icon" width="30" height="30" />
   <p class=atac >
@@ -40,36 +38,116 @@
 </div>
 </head>
 
-<style>
-	html,
-	body {
-		height: 100%;
-	}
-</style>
-
 <body>
-<br><br><br><br>
-<div class="w3-show-inline-block">
-	<div class="w3-bar">
-		&emsp;&emsp;&emsp;&emsp;&emsp;
-		&emsp;&emsp;&emsp;&emsp;&emsp;
-		&emsp;&emsp;&emsp;&emsp;<a class="btn btn-danger btn-lg" href="{{url_for('menu_for_forms_positive')}}" role="button "style ="width : 400px ;height:50px;">Are you Corona
-			positive?</a>
-	</div>
-</div>
-<img class="img-responsive center-block paddingImg" src="{{ url_for('static', filename='logo (1).png') }}" alt="logo.png"
-	width="300" height="300">
+  <!-- 1)symptoms
+  2)Preventions
+  3)Treatments
+  4)Coping
+  <a class="nav-link"  href="{{url_for('symptoms')}}">Symptoms</a>
 
-<div class="w3-show-inline-block">
-	<div class="w3-bar">
-		<a class="btn btn-danger btn-lg" href="{{url_for('menu_for_forms_negative')}}" role="button" style ="width : 400px ;height:50px;">Do you want to take the
-			Covid test?</a>
 
-	</div>
+  1)contacts
+  2)login
+  3)sign up -->
+
+  <section id="title">
+    <div class="container-fluid">
+      <!-- Nav Bar -->
+
+      <nav class="navbar navbar-expand-lg navbar-dark ">
+
+        <a class="navbar-brand logo newfo" href=""><h1>A.T.A.C</h1></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+
+            <a class="nav-link" href="{{url_for('signup')}}">Contact us</a></li></ul>
+              <!-- <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+            <a class="navbar-brand logo " href=""><img class="sai" src="https://www.flaticon.com/svg/static/icons/svg/1946/1946488.svg" alt="girl" width="30" height="30"></a> -->
+</li>
+</ul>
+        </div>
+
+      </nav>
+
+
+
+      <!-- Title -->
+
+      <div class="row ">
+        <div class="col-6 text">
+          <br />
+          <h1 class="newfo">A Tech Against Covid</h1>
+
+
+
+
+          <button type="button" class="btn btn-dark btn-lg download-button" ><a  href="{{url_for('signup')}}">Sign up</a></button>
+        <button type="button" class="btn btn-dark btn-lg download-button" ><a  href="{{url_for('login')}}"> Login </a></button>
+        </div>
+        <div class="col-6">
+          <center>
+            <img  class="circle" src="/img.png" alt="iphone-mockup">
+          </center>
+        </div>
+      </div>
 </div>
+  </section>
+  <section id="blank">
+    <h3>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    </h3>
+  </section>
+
+
+  <!-- Features -->
+  <section id="testimonials">
+<div id="testimonial-carousel" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="hover">
+  <div class="carousel-inner">
+<div class="carousel-item active">
+<a class="nav-link" href="{{url_for('preventions')}}"><h1 class=monial>Preventions</h1></a>
+<br />
+<br />
+<img class="sai-pic" src="https://www.flaticon.com/svg/static/icons/svg/2599/2599564.svg" alt="girl" width="150" height="150">
+    </div>
+<div class="carousel-item  ">
+    <a class="nav-link" href="{{url_for('symptoms')}}"><h1 class=monial>Symptoms</h1></a>
+    <br />
+    <br />
+<img class="sai-pic" src="https://www.flaticon.com/svg/static/icons/svg/2599/2599588.svg" alt="girl" width="150" height="150">
+  </div>
+  <div class="carousel-item  ">
+      <a class="nav-link" href="{{url_for('treatments')}}"><h1 class=monial>Treatments</h1></a>
+      <br />
+      <br />
+  <img class="sai-pic" src="https://www.flaticon.com/svg/static/icons/svg/2599/2599618.svg" alt="girl" width="150" height="150">
+    </div>
+    <div class="carousel-item  ">
+        <a class="nav-link" href="{{url_for('coping')}}"><h1 class=monial>Coping</h1></a>
+        <br />
+        <br />
+    <img class="sai-pic" src="https://www.flaticon.com/svg/static/icons/svg/2599/2599615.svg" alt="girl" width="150" height="150">
+      </div>
+  </div>
+  <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+  </section>
+  <section class="foot">
+    <center>
+          <p>© Copyright 2020 A.T.A.C</p>
+    </center>
+
+  </section>
+
 </body>
+
 </html>
-
-
-	
-		
