--- a/templates/login.html
+++ b/templates/login.html
@@ -42,7 +42,7 @@
             <!-- <form action="{{url_for('login')}}"> -->
             <br><br>
 
-            <form action="{{url_for('index')}}">
+            <form action="{{url_for('main')}}">
                 <label for="emailid">Email:</label>
                 <input type="text" id="emailid" name="emailid" value="" placeholder="name@email.com">
                 <br><br>
