linked all home pages

--- a/templates/login.html
+++ b/templates/login.html
@@ -47,7 +47,7 @@
                 <input type="text" id="emailid" name="emailid" value="" placeholder="name@email.com">
                 <br><br>
                 <label for="passid">Password:</label>
-                <input type="text" id="passid" name="passid" value="">
+                <input type="password" id="passid" name="passid" value="">
                 <br><br>
                 <input type="submit" value="Submit Form">
             </form>
