--- a/templates/menu_for_forms_negative.html
+++ b/templates/menu_for_forms_negative.html
@@ -29,7 +29,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
 <div class="bar">
-    <a href="{{url_for('index')}}">
+    <a href="{{url_for('main')}}">
 <img  class="home-icon" src="https://www.flaticon.com/svg/static/icons/svg/846/846449.svg" alt="home icon" width="30" height="30" />
   <p class=atac >
     <b>A.T.A.C</b>
