--- a/templates/main.html
+++ b/templates/main.html
@@ -31,7 +31,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<div class="bar">
-    <a href="{{url_for('index')}}">
+    <a href="{{url_for('main')}}">
 <img  class="home-icon" src="https://www.flaticon.com/svg/static/icons/svg/846/846449.svg" alt="home icon" width="30" height="30" />
   <p class=atac >
     <b>A.T.A.C</b>
