styling - need login to work

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>A.T.A.C</title>
-  <link rel="shortcut icon" href="{{ url_for('static', filename='styles/favicon.ico') }}">
+
+<!--  <link rel="shortcut icon" href="{{ url_for('static', filename='styles/favicon.ico') }}">-->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -91,7 +92,7 @@
         </div>
         <div class="col-6">
           <center>
-            <img  class="circle" src="/img.png" alt="iphone-mockup">
+            <img  class="circle" src="{{ url_for('static', filename='img.png') }}" alt="iphone-mockup">
           </center>
         </div>
       </div>
