--- a/templates/menu_for_forms_positive.html
+++ b/templates/menu_for_forms_positive.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet "href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -31,7 +31,7 @@
 <div class="bar">
     <a href="{{url_for('main')}}">
 <img  class="home-icon" src="https://www.flaticon.com/svg/static/icons/svg/846/846449.svg" alt="home icon" width="30" height="30" />
-  <p class=atac >
+  <p class=atac>
     <b>A.T.A.C</b>
   </p>
 </a>
@@ -44,7 +44,7 @@
     text-align:center;
     }
 </style>
-<body>
+<body style="background-color:#008F9C;">
 
 <br><br><br><br>
 <div class="container">
