--- a/templates/xray_upload.html
+++ b/templates/xray_upload.html
@@ -43,8 +43,8 @@ max-width:700px;
 margin:auto;
 }
 </style>
-<body>
-<br>
+<body style="background-color:#008F9C;">
+<br><br><br><br><br><br><br><br><br><br><br>
 <div class="jumbotron">
 <h4 class="lead container">Chest Xray Upload</h4>
 <form id="upload-form" method="post" enctype="multipart/form-data">
