--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -182,6 +182,21 @@ p{
   margin:0% 20% 30% 30%;
   border-radius: 80%;
 }
+
+.cirlcle1{
+
+ height: 100%
+ width: 30%
+  margin:0% 20% 30% 30%;
+  border-radius: 80%;
+}
+
+label {
+  display: inline-block;
+  width: 140px;
+  text-align: left;
+}
+
 .nav-link{
   font-size:1.2rem;
 }
