--- a/templates/medical_details.html
+++ b/templates/medical_details.html
@@ -41,51 +41,75 @@
 .jumbotron{
 max-width:700px;
 margin:auto;
+text-align :left;
+}
+label{
+    display: inline-block;
+    /* float: left; */
+    clear: left;
+    width: 250px;
+    text-align: right;
+}
+input {
+  display: inline-block;
+  /* float: left; */
 }
 
 
-</style>
-<body>
 
+
+</style>
+<body style="background-color:#008F9C;">
+<center>
 <div class="jumbotron">
+
     <h3 class="display-5" style="text-align:center">ENTER YOUR DETAILS</h3>
     <h7 style="text-align:center" class="form-text text-muted">Fill out this form</h7>
 
 
     <form method="post">
-
+        <center>
         <hr class="my-4">
         <h5 class="lead container"><strong>MEDICAL DETAILS</strong></h5><br>
         <div class="row">
 
             <div class="column ">
-                &emsp;&emsp;&emsp;<label for="temp">&emsp;&emsp;Temperature:</label>
-                &emsp;<input class="lead" type="number" id="temp" name="temp" value="" placeholder="Temperature">
+                <label for="temp">&emsp;&emsp;Temperature:</label>
+                <input class="lead" type="number" id="temp" name="temp" value="" placeholder="Temperature">
                 <br><br>
-                &emsp;&emsp;&emsp;<label for="oxymeter">Oximeter Reading:</label>
-                &emsp;<input class="lead" type="number" id="oxymeter" name="oxymeter" value=""
+                <label for="oxymeter">Oximeter Reading:</label>
+                <input class="lead" type="number" id="oxymeter" name="oxymeter" value=""
                              placeholder="Oxymeter Reading">
                 <br><br>
 
 
-                &emsp;&emsp;&emsp;&emsp;<label for="spiro_fec">Spirometry (FEV1):</label>
-                &emsp;<input class="lead" type="number" id="spiro_fec" name="spiro_fec" value=" "
+               <label for="spiro_fec">Spirometry (FEV1):</label>
+                <input class="lead" type="number" id="spiro_fec" name="spiro_fec" value=" "
                              placeholder="Spirometry FEC"/>
                 <br><br>
-                &emsp;&emsp;&emsp;&emsp;<label for="spiro_fvc">Spirometry (FVC):</label>
-                &emsp;<input class="lead" type="number" id="spiro_fvc" name="spiro_fvc" value=""
+               <label for="spiro_fvc">Spirometry (FVC):</label>
+                <input class="lead" type="number" id="spiro_fvc" name="spiro_fvc" value=""
                              placeholder="Spirometry FVC"/>
 
 
                 <br><br>
+            </div></div>
+        </center>
+    </form>
+
                 <p>
+                    <center>
                     <input class="btn btn-danger btn-lg" onclick="window.open('http://127.0.0.1:5000/menu_for_forms_positive');"
                            type="submit" value="Submit & Proceed"/>
+    </center>
                 </p>
-            </div>
+
+
         </div>
 
-    </form>
-</div>
+
+</center>
+
+
 </body>
 </html>
