--- a/templates/menu_for_forms_negative.html
+++ b/templates/menu_for_forms_negative.html
@@ -44,7 +44,7 @@
     text-align:center;
     }
 </style>
-<body>
+<body style="background-color:#008F9C;">
 
 <br><br><br><br>
 <div class="container">
