--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,8 @@
   3)sign up -->
 
   <section id="title">
-    <div class="container-fluid">
+    
+      <div  style="background-image: url('image.png');" class="container-fluid">
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark ">
